# cmakeTemplate

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
Lib/: Log.cpp  Log.h
